# convergio-ipc

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  release-please-config.json  tarpaulin-report.json
.github/workflows/: ci.yml
crates/convergio-ipc/: Cargo.toml
crates/convergio-ipc/src/: agents.rs  budget.rs  channels.rs  ext.rs  lib.rs  locks.rs  mcp_defs.rs  messaging.rs  messaging_tests.rs  models.rs  models_tests.rs  process_scanner.rs  routes.rs  routes_handlers.rs  schema.rs  skills.rs  sse.rs  types.rs  utils.rs  websocket.rs
docs/adr/: 001-extraction.md  002-audit-security-fixes.md  008-domain-event-sink-via-appcontext.md
