[workspace]
resolver = "2"
members = ["crates/convergio-ipc"]

[workspace.package]
version = "0.1.6"
edition = "2021"
license = "MIT"
repository = "https://github.com/Roberdan/convergio-ipc"

[workspace.dependencies]
# SDK dependencies
convergio-types = "0.1"
convergio-telemetry = "0.1"

# Standalone extracted crates
convergio-db = "0.1"

# Common deps — pin same versions as SDK for compatibility
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs", "io-util"] }
tracing = "0.1"
axum = { version = "0.7", features = ["ws", "multipart"] }
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.13", features = ["json"] }
async-stream = "0.3"
futures-core = "0.3"
libc = "0.2"
