[package]
name = "convergio-ipc"
description = "Message bus, SSE event streaming, agent registry"
version = "0.1.6"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
convergio-types = { workspace = true }
convergio-telemetry = { workspace = true }
convergio-db = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
async-stream = { workspace = true }
futures-core = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
